@@ -88,7 +88,7 @@ WHERE
          1e+18 | 1e+18         | 1 Em    | 1 Zg     | 1 Es    | 1 EA    | 1 EK    | 1 Emol    | 1 Ecd    | 1 EB    | 1 EHz    | 1 EN    | 1 EPa    | 1 EJ    | 1 EW    | 1 EC    | 1 EV    | 1 EF    | 1 EΩ    | 1 ES    | 1 EWb    | 1 ET    | 1 EH    | 1 Elx    | 1 EGy    | 1 Ekat
          1e+15 | 1e+15         | 1 Pm    | 1 Eg     | 1 Ps    | 1 PA    | 1 PK    | 1 Pmol    | 1 Pcd    | 1 PB    | 1 PHz    | 1 PN    | 1 PPa    | 1 PJ    | 1 PW    | 1 PC    | 1 PV    | 1 PF    | 1 PΩ    | 1 PS    | 1 PWb    | 1 PT    | 1 PH    | 1 Plx    | 1 PGy    | 1 Pkat
  1000000000000 | 1000000000000 | 1 Tm    | 1 Pg     | 1 Ts    | 1 TA    | 1 TK    | 1 Tmol    | 1 Tcd    | 1 TB    | 1 THz    | 1 TN    | 1 TPa    | 1 TJ    | 1 TW    | 1 TC    | 1 TV    | 1 TF    | 1 TΩ    | 1 TS    | 1 TWb    | 1 TT    | 1 TH    | 1 Tlx    | 1 TGy    | 1 Tkat
-    1000000000 | 1000000000    | 1 Gm    | 1 Tg     | 1 Gs    | 1 GA    | 1 GK    | 1 Gmol    | 1 Gcd    | 1 GB    | 1 GHz    | 1 GN    | 1 GPa    | 1 GJ    | 1 GW    | 1 GC    | 1 GV    | 1 GF    | 1 GΩ    | 1 GS    | 1 GWb    | 1 GT    | 1 GH    | 1 Glx    | 1 GGy    | 1 Gkat
+    1000000000 | 1000000000    | 1 Gm    | 1 Tg     | 1 Gsec  | 1 GA    | 1 GK    | 1 Gmol    | 1 Gcd    | 1 GB    | 1 GHz    | 1 GN    | 1 GPa    | 1 GJ    | 1 GW    | 1 GC    | 1 GV    | 1 GF    | 1 GΩ    | 1 GS    | 1 GWb    | 1 GT    | 1 GH    | 1 Glx    | 1 GGy    | 1 Gkat
        1000000 | 1000000       | 1 Mm    | 1 Gg     | 1 Ms    | 1 MA    | 1 MK    | 1 Mmol    | 1 Mcd    | 1 MB    | 1 MHz    | 1 MN    | 1 MPa    | 1 MJ    | 1 MW    | 1 MC    | 1 MV    | 1 MF    | 1 MΩ    | 1 MS    | 1 MWb    | 1 MT    | 1 MH    | 1 Mlx    | 1 MGy    | 1 Mkat
           1000 | 1000          | 1 km    | 1 Mg     | 1 ks    | 1 kA    | 1 kK    | 1 kmol    | 1 kcd    | 1 kB    | 1 kHz    | 1 kN    | 1 kPa    | 1 kJ    | 1 kW    | 1 kC    | 1 kV    | 1 kF    | 1 kΩ    | 1 kS    | 1 kWb    | 1 kT    | 1 kH    | 1 klx    | 1 kGy    | 1 kkat
              1 | 1             | 1 m     | 1 kg     | 1 s     | 1 A     | 1 K     | 1 mol     | 1 cd     | 1 B     | 1 Hz     | 1 N     | 1 Pa     | 1 J     | 1 W     | 1 C     | 1 V     | 1 F     | 1 Ω     | 1 S     | 1 Wb     | 1 T     | 1 H     | 1 lx     | 1 Gy     | 1 kat
@@ -286,9 +286,9 @@ WHERE
  l   | 1e-27 m^3       | 1e-24 m^3       | 1e-21 m^3       | 1e-18 m^3       | 1e-15 m^3          | 1e-12 m^3       | 1e-09 m^3       | 1e-09 m^3       | 1e-06 m^3       | 1e-05 m^3       | 0.0001 m^3     | 0.001 m^3      | 0.01 m^3       | 0.1 m^3                       | 1 m^3           | 1000 m^3        | 1000000 m^3      | 1000000000 m^3      | 1000000000000 m^3 | 1e+15 m^3       | 1e+18 m^3       | 1e+21 m^3
  t   | 1 ag            | 1 fg            | 98.0665 kPa     | 304.8 mm        | 0.000473176473 m^3 | 1 N             | 1 g             | 1 g             | 1 kg            | 200 mg          | 100 kg         | 1 Mg           |                | 100 Mg                        | 1 Gg            | 1 Tg            | 1 Pg             | 1 Eg                | 1 Zg              | 1 Yg            | 1e+24 kg        | 1e+27 kg
  bar | 100 zPa         | 100 aPa         | 100 fPa         | 100 pPa         | 100 nPa            | 100 µPa         | 100 mPa         | 100 mPa         | 100 Pa          | 1 kPa           | 10 kPa         | 100 kPa        | 1 MPa          | 1.05457180005237e-34 m^2*kg/s | 100 MPa         | 100 GPa         | 100 TPa          | 100 PPa             | 100 EPa           | 100 ZPa         | 100 YPa         | 1e+29 Pa
- min | 60 ys           | 60 zs           | 60 as           | 60 fs           | 60 ps              | 60 ns           | 60 µs           | 60 µs           | 60 ms           | 600 ms          | 6 s            | 60 s           | 600 s          | 6 ks                          | 60 ks           | 60 Ms           | 60 Gs            | 60 Ts               | 60 Ps             | 60 Es           | 60 Zs           | 60 Ys
- h   | 3.6 zs          | 3.6 as          | 3.6 fs          | 3.6 ps          | 10 klx             | 3.6 µs          | 3.6 ms          | 3.6 ms          | 1 mH            | 20.1168 m       | 360 s          | 3.6 ks         | 36 ks          | 360 ks                        | 3.6 Ms          | 3.6 Gs          | 3.6 Ts           | 3.6 Ps              | 3.6 Es            | 3.6 Zs          | 3.6 Ys          | 3.6e+27 s
- d   | 914.4 mm        | 86.4 as         | 86.4 fs         | 86.4 ps         | 86.4 ns            | 86.4 µs         | 86.4 ms         | 86.4 ms         | 86.4 s          | 1 cd            | 8.64 ks        | 86.4 ks        | 864 ks         | 0.238480942392 m^3            | 86.4 Ms         | 86.4 Gs         | 86.4 Ts          | 86.4 Ps             | 86.4 Es           | 86.4 Zs         | 86.4 Ys         | 8.64e+28 s
+ min | 60 ys           | 60 zs           | 60 as           | 60 fs           | 60 ps              | 60 ns           | 60 µs           | 60 µs           | 60 ms           | 600 ms          | 6 s            | 60 s           | 600 s          | 6 ks                          | 60 ks           | 60 Ms           | 60 Gsec          | 60 Ts               | 60 Ps             | 60 Es           | 60 Zs           | 60 Ys
+ h   | 3.6 zs          | 3.6 as          | 3.6 fs          | 3.6 ps          | 10 klx             | 3.6 µs          | 3.6 ms          | 3.6 ms          | 1 mH            | 20.1168 m       | 360 s          | 3.6 ks         | 36 ks          | 360 ks                        | 3.6 Ms          | 3.6 Gsec        | 3.6 Ts           | 3.6 Ps              | 3.6 Es            | 3.6 Zs          | 3.6 Ys          | 3.6e+27 s
+ d   | 914.4 mm        | 86.4 as         | 86.4 fs         | 86.4 ps         | 86.4 ns            | 86.4 µs         | 86.4 ms         | 86.4 ms         | 86.4 s          | 1 cd            | 8.64 ks        | 86.4 ks        | 864 ks         | 0.238480942392 m^3            | 86.4 Ms         | 86.4 Gsec       | 86.4 Ts          | 86.4 Ps             | 86.4 Es           | 86.4 Zs         | 86.4 Ys         | 8.64e+28 s
  in  | 2.54e-26 m      | 25.4 ym         | 25.4 zm         | 25.4 am         | 0.020457405 m^3    | 25.4 pm         | 25.4 nm         | 25.4 nm         | 60 s            | 254 µm          | 2.54 mm        | 25.4 mm        | 254 mm         | 2.54 m                        | 600 g           | 25.4 km         | 25.4 Mm          | 25.4 Gm             | 25.4 Tm           | 25.4 Pm         | 25.4 Em         | 25.4 Zm
  ft  | 3.048e-25 m     | 304.8 ym        | 304.8 zm        | 304.8 am        | 304.8 fm           | 304.8 pm        | 304.8 nm        | 304.8 nm        | 304.8 µm        | 3.048 mm        | 30.48 mm       | 304.8 mm       | 3.048 m        | 30.48 m                       | 304.8 m         | 304.8 km        | 304.8 Mm         | 304.8 Gm            | 304.8 Tm          | 304.8 Pm        | 304.8 Em        | 304.8 Zm
  yd  | 9.144e-25 m     | 914.4 ym        | 914.4 zm        | 914.4 am        | 914.4 fm           | 914.4 pm        | 914.4 nm        | 914.4 nm        | 914.4 µm        | 9.144 mm        | 91.44 mm       | 914.4 mm       | 9.144 m        | 91.44 m                       | 914.4 m         | 914.4 km        | 914.4 Mm         | 914.4 Gm            | 914.4 Tm          | 914.4 Pm        | 914.4 Em        | 914.4 Zm
